fix(gamers-arena): update gamer social handles

--- a/src/components/GamersArena.astro
+++ b/src/components/GamersArena.astro
@@ -23,31 +23,31 @@ const gamers: Gamer[] = [
     socials: {
       twitch: "https://twitch.tv/carloslugones",
       instagram: "https://instagram.com/carloslugones",
-      twitter: "https://twitter.com/carloslugones",
+      twitter: "https://x.com/MrCarlosLugones",
     },
   },
   {
     id: "heber",
     name: "Heber",
-    gamerTag: "Heber",
+    gamerTag: "Yudai",
     photo: "/gamers/heber.png",
     bio: "Competitivo nato. Si hay ranked, ahí estoy. Los mancos también ganamos.",
     socials: {
-      twitch: "https://twitch.tv/heber",
+      twitch: "https://www.twitch.tv/yudaih",
       youtube: "https://youtube.com/@heber",
-      twitter: "https://twitter.com/heber",
+      twitter: "https://x.com/creativeyudai",
     },
   },
   {
     id: "reinier",
     name: "Reinier",
-    gamerTag: "Reinier",
+    gamerTag: "Ragnarok",
     photo: "/gamers/reinier.jpeg",
     bio: "El más manco del grupo, pero con más actitud que nadie. Content creator y amante del gaming.",
     socials: {
-      twitch: "https://twitch.tv/reinier",
-      instagram: "https://instagram.com/reinier",
-      youtube: "https://youtube.com/@reinier",
+      twitch: "https://twitch.tv/ragnarokreinier",
+      instagram: "https://instagram.com/ragnarokreinier",
+      youtube: "https://www.youtube.com/@ragnarokreinier",
     },
   },
 ];
